--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" /> -->
+    <meta charset="utf-8" />
     <title>React App</title>
+    <style>
+        *,
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #f4eade;
+        }
+    </style>
 </head>
 
 <body>
